--- a/src/app/components/event-card/event-card.component.html
+++ b/src/app/components/event-card/event-card.component.html
@@ -1,6 +1,6 @@
 <a
   class="event-card"
-  [routerLink]="['/dogadaji', event.id]"
+  [routerLink]="['/events', event.id]"
   [state]="linkState"
   [queryParams]="linkQuery"
 >
