--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -15,7 +15,7 @@
 
   <!-- Interni linkovi (Angular Router) -->
   <div class="footer-links">
-    <a routerLink="/kontakt">Kontakt</a>
+    <a routerLink="/contact">Kontakt</a>
   </div>
 
   <p class="copyright">
