--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,11 +8,11 @@
 
     <ul class="nav-links" [class.active]="menuOpen">
       <li><a routerLink="/" (click)="closeMenu()">POČETNA</a></li>
-      <li><a routerLink="/dogadaji" (click)="closeMenu()">DOGAĐAJI</a></li>
-      <li><a routerLink="/galerija" (click)="closeMenu()">GALERIJA</a></li>
-      <li><a routerLink="/onama" (click)="closeMenu()">O NAMA</a></li>
+      <li><a routerLink="/events" (click)="closeMenu()">DOGAĐAJI</a></li>
+      <li><a routerLink="/gallery" (click)="closeMenu()">GALERIJA</a></li>
+      <li><a routerLink="/about" (click)="closeMenu()">O NAMA</a></li>
       <li><a routerLink="/blog" (click)="closeMenu()">BLOG</a></li>
-      <li><a routerLink="/kontakt" (click)="closeMenu()">KONTAKT</a></li>
+      <li><a routerLink="/contact" (click)="closeMenu()">KONTAKT</a></li>
 
       <!-- DESKTOP: profil + dropdown -->
       <li class="profile-wrapper desktop-only" *ngIf="user$ | async as user">
